# html5-parser

./: .gitignore  pyproject.toml  ruff.toml  setup.cfg  setup.py  unix_build.py  win_build.py
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.py  ci.yml  win-ci.py  win_ci.py
